welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:1: error: ')' expected but '=' found.
var (n=0)
      ^RunFour:14: error: '=' expected but '}' found.
	}
        ^